[package]
name = "toolboxer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive command-line toolkit for developers"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/toolboxer"
keywords = ["cli", "tools", "utility", "development", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
colored = "2.0"
humansize = "2.1"
chrono = "0.4"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Async runtime
tokio = { version = "1.34", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
