[package]
name = "toolboxer"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["iphlpapi", "processthreadsapi", "winbase", "psapi", "winnt", "handleapi", "errhandlingapi", "securitybaseapi"] }
termcolor = "1.4"
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
humansize = "2.1"
walkdir = "2.4"
lazy_static = "1.4"